# steelseries-sync

./: .gitignore  CHANGELOG.md  README.md  clearify.config.ts  package-lock.json  package.json  pnpm-lock.yaml
deploy/: index.html
docs/internal/: index.md
docs/plans/: 2026-02-16-steelseries-sync-design.md  2026-02-16-steelseries-sync-implementation.md
docs/public/: getting-started.md  index.md
scripts/: setup-mac-mini.sh
server/: package-lock.json  package.json
server/src/: app.module.ts  main.ts
server/src/auth/: auth.controller.spec.ts  auth.controller.ts  auth.module.ts  auth.service.ts  jwt.strategy.ts
server/src/sync/: sync.controller.spec.ts  sync.controller.ts  sync.service.ts
site/: index.html
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: backup.rs  config.rs  lib.rs  main.rs  safety.rs  sync_engine.rs  tray.rs  watcher.rs
src-tauri/src/providers/: folder.rs  hosted.rs  mod.rs
src/pages/: BackupBrowser.tsx  Settings.tsx  Status.tsx
