[package]
name = "steelseries-sync"
version = "0.1.0"
description = "Sync SteelSeries GG config files across machines"
authors = ["Marlin"]
edition = "2021"

[lib]
name = "steelseries_sync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
sysinfo = "0.33"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
dirs = "6"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"

